--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Fiction'
+- GITenberg
 title: The Daughters of Danaus
 url: http://www.gutenberg.org/ebooks/21858
